--- a/resources/src/main/res/values/colors.xml
+++ b/resources/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="song_name_text">#B3A5C0FF</color>
+    <color name="artist_text">#EAF0FF</color>
+    <color name="player_background">#091227</color>
 </resources>
