--- a/app/src/main/res/layout/fragment_my_playlists.xml
+++ b/app/src/main/res/layout/fragment_my_playlists.xml
@@ -6,40 +6,28 @@
 
     <TextView
         android:id="@+id/text_view_my_playlists"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        style="@style/Text.Header"
         android:text="@string/my_playlists"
-        android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_my_playlists"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        style="@style/RecyclerViewVerticalList"
         app:layout_constraintBottom_toTopOf="@+id/player"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_view_my_playlists" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="24dp"
+        style="@style/FABMyPlaylists"
         android:contentDescription="@string/add_new_playlist"
         app:layout_constraintBottom_toTopOf="@+id/player"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/player"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:text="player"
+        style="@style/ButtonAkaPlayer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
