--- a/app/src/main/res/layout/fragment_playlist_editor.xml
+++ b/app/src/main/res/layout/fragment_playlist_editor.xml
@@ -17,7 +17,7 @@
         android:id="@+id/player"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:text="player"
+        android:text="@string/player"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
