--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/app_bar_search"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="Search"
+        android:icon="@drawable/ic_search_white_24dp"
+        android:title="@string/search"
         app:showAsAction="always" />
 
 </menu>
