--- a/resources/src/freeVersion/res/drawable/ic_launcher_foreground.xml
+++ b/resources/src/freeVersion/res/drawable/ic_launcher_foreground.xml
@@ -1,15 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
+    android:tint="@color/launcher_foreground_tint"
     android:viewportWidth="108"
-    android:viewportHeight="108"
-    android:tint="#CDDC39">
-  <group android:scaleX="2.0619"
-      android:scaleY="2.0619"
-      android:translateX="29.2572"
-      android:translateY="29.2572">
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M10,16.5l6,-4.5 -6,-4.5v9zM12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8z"/>
-  </group>
+    android:viewportHeight="108">
+    <group
+        android:scaleX="2.0619"
+        android:scaleY="2.0619"
+        android:translateX="29.2572"
+        android:translateY="29.2572">
+        <path
+            android:fillColor="@android:color/white"
+            android:pathData="M10,16.5l6,-4.5 -6,-4.5v9zM12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8z" />
+    </group>
 </vector>
