--- a/resources/src/main/res/drawable/ic_baseline_skip_previous_24.xml
+++ b/resources/src/main/res/drawable/ic_baseline_skip_previous_24.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="30dp"
     android:height="30dp"
-    android:tint="#EAF0FF"
+    android:tint="@color/main_accent_color"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
