--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.github.pavelzhurman.ui.player.PlayerView
-        android:id="@+id/player_view"
+    <com.github.pavelzhurman.ui.player.MiniPlayerView
+        android:id="@+id/mini_player_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
