--- a/ui/src/main/res/layout/view_mini_player.xml
+++ b/ui/src/main/res/layout/view_mini_player.xml
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatSeekBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
