--- a/app/src/main/res/layout/item_recycler_view_main_fragment.xml
+++ b/app/src/main/res/layout/item_recycler_view_main_fragment.xml
@@ -1,42 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="190dp"
-    android:layout_height="242dp"
-    android:layout_marginEnd="16dp">
+    style="@style/CardViewItemRecyclerViewMainFragment">
 
-    <ImageView
-        android:id="@+id/image_view_thumbnail"
-        android:layout_width="190dp"
-        android:layout_height="190dp"
-        android:background="@color/ic_launcher_background"
-        android:contentDescription="@string/thumbnail_image"
-        android:src="@drawable/ic_launcher_foreground"
-        app:layout_constraintCircleRadius="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/background_main">
 
-    <TextView
-        android:id="@+id/text_view_song_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_artist"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_view_thumbnail"
-        tools:text="Song name" />
+        <ImageView
+            android:id="@+id/image_view_thumbnail"
+            style="@style/ImageViewPosterForRecyclerViewMainFragmentItem"
+            android:background="@color/ic_launcher_background"
+            android:contentDescription="@string/thumbnail_image"
+            android:src="@drawable/ic_launcher_foreground"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/text_view_artist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="Artist" />
+        <TextView
+            android:id="@+id/text_view_song_name"
+            style="@style/Text.RecyclerViewItemSongName"
+            app:layout_constraintBottom_toTopOf="@+id/text_view_artist"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_view_thumbnail"
+            tools:text="Song name" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/text_view_artist"
+            style="@style/Text"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Artist" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.cardview.widget.CardView>
