--- a/resources/src/main/res/values/colors.xml
+++ b/resources/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#C4C4C4</color>
 
     <color name="background_main">#091227</color>
     <color name="small_icons_color">#8996B8</color>
@@ -17,4 +18,5 @@
     <color name="song_name_text">#B3A5C0FF</color>
     <color name="artist_text">#EAF0FF</color>
     <color name="player_background">#091227</color>
+    <color name="background_item_freesound_search_songs">#1AC4C4C4</color>
 </resources>
