--- a/resources/src/main/res/values/styles_button.xml
+++ b/resources/src/main/res/values/styles_button.xml
@@ -34,4 +34,12 @@
         <item name="android:layout_marginEnd">12dp</item>
     </style>
 
+    <style name="FreesoundSearchSongsItemImageButton" parent="Widget.AppCompat.ImageButton">
+        <item name="android:layout_width">36dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:background">?android:selectableItemBackground</item>
+
+    </style>
+
 </resources>
