--- a/resources/src/main/res/values/styles_text.xml
+++ b/resources/src/main/res/values/styles_text.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="Text" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -18,5 +19,15 @@
         <item name="android:layout_marginTop">60dp</item>
         <item name="android:layout_marginEnd">30dp</item>
         <item name="android:textColor">@color/player_time_text_color</item>
+    </style>
+
+    <style name="Text.FreesoundSearchMarginStart">
+        <item name="android:layout_marginStart">8dp</item>
+    </style>
+
+    <style name="Text.RecyclerViewItemSongName">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+
     </style>
 </resources>
