--- a/app/src/main/res/layout/fragment_free_sound_search.xml
+++ b/app/src/main/res/layout/fragment_free_sound_search.xml
@@ -14,6 +14,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button_search"
+        style="@style/FreesoundSearchSongsButton"
+        android:text="@string/search"
+        app:layout_constraintEnd_toStartOf="@+id/edit_text_filter_by"
+        app:layout_constraintStart_toEndOf="@+id/edit_text_search_by"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/edit_text_filter_by"
         style="@style/EditTextFreeSoundSearch"
