--- a/resources/src/main/res/values/styles_button.xml
+++ b/resources/src/main/res/values/styles_button.xml
@@ -14,8 +14,8 @@
     </style>
 
     <style name="PlayerImageButton" parent="Widget.AppCompat.ImageButton">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">48dp</item>
         <item name="android:background">@color/background_main</item>
     </style>
 
@@ -25,7 +25,7 @@
 
     <style name="PlayerImageButton.Repeat">
         <item name="android:layout_marginTop">30dp</item>
-        <item name="android:layout_marginEnd">12dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
     </style>
 
     <style name="FreesoundSearchSongsItemImageButton" parent="Widget.AppCompat.ImageButton">
@@ -39,6 +39,9 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">40dp</item>
+    </style>
+
+    <style name="PagerImageButtonFavourite" parent="PlayerImageButton">
     </style>
 
 </resources>
