--- a/ui/src/main/res/layout/view_mini_player.xml
+++ b/ui/src/main/res/layout/view_mini_player.xml
@@ -10,6 +10,7 @@
         android:id="@+id/image_album"
         android:layout_width="@dimen/poster_layout_width"
         android:layout_height="@dimen/poster_layout_height"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -71,6 +72,7 @@
         android:id="@+id/seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/image_album"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
