--- a/app/src/main/res/layout/fragment_favourite_songs.xml
+++ b/app/src/main/res/layout/fragment_favourite_songs.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/text_view_favourite_songs"
-        style="@style/Text.Header"
+        style="@style/TextHeader"
         android:text="@string/favourite_songs"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
