--- a/app/src/main/res/layout/fragment_my_playlists.xml
+++ b/app/src/main/res/layout/fragment_my_playlists.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/text_view_my_playlists"
-        style="@style/Text.Header"
+        style="@style/TextHeader"
         android:text="@string/my_playlists"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_view_my_playlists" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add_playlist"
         style="@style/FABMyPlaylists"
         android:contentDescription="@string/add_new_playlist"
         app:layout_constraintBottom_toBottomOf="parent"
