--- a/app/src/main/res/layout/item_freesound_search_songs.xml
+++ b/app/src/main/res/layout/item_freesound_search_songs.xml
@@ -12,6 +12,7 @@
         <ImageView
             android:id="@+id/image_view_poster"
             style="@style/ImageViewPosterForFreesoundSearchSongItem"
+            android:scaleType="centerCrop"
             android:background="@color/grey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -20,6 +21,7 @@
         <TextView
             android:id="@+id/text_view_name"
             style="@style/Text.FreesoundSearchMarginStart"
+            app:layout_constraintEnd_toEndOf="@+id/text_view_description"
             app:layout_constraintStart_toEndOf="@+id/image_view_poster"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="File name.wav" />
@@ -27,6 +29,7 @@
         <TextView
             android:id="@+id/text_view_description"
             style="@style/Text.FreesoundSearchMarginStart"
+            app:layout_constraintEnd_toStartOf="@+id/image_button_play"
             app:layout_constraintStart_toEndOf="@+id/image_view_poster"
             app:layout_constraintTop_toBottomOf="@+id/text_view_name"
             tools:text="Description description" />
@@ -34,8 +37,10 @@
         <TextView
             android:id="@+id/text_view_tags"
             style="@style/Text.FreesoundSearchMarginStart"
+            app:layout_constraintEnd_toEndOf="@+id/text_view_description"
             app:layout_constraintStart_toEndOf="@+id/image_view_poster"
             app:layout_constraintTop_toBottomOf="@+id/text_view_description"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:text="tags,tags,tags,tags,tags" />
 
 
@@ -68,7 +73,7 @@
             style="@style/Text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="number of downloads" />
+            tools:text="789"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
