--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/app_bar_update"
+        android:icon="@drawable/ic_baseline_update_24"
+        android:title="@string/update"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/app_bar_search"
         android:icon="@drawable/ic_search_white_24dp"
         android:title="@string/search"
