--- a/resources/src/main/res/values/styles_image_view.xml
+++ b/resources/src/main/res/values/styles_image_view.xml
@@ -10,6 +10,10 @@
     <style name="ImageViewPosterForRecyclerViewMainFragmentItem">
         <item name="android:layout_width">190dp</item>
         <item name="android:layout_height">190dp</item>
+    </style>
 
+    <style name="ImageViewPosterForPlayerPager">
+        <item name="android:layout_width">260dp</item>
+        <item name="android:layout_height">260dp</item>
     </style>
 </resources>
